[gd_scene load_steps=4 format=3 uid="uid://nnt62jra4vmv"]

[ext_resource type="Script" path="res://Scripts/UI/Educational/BattleWiki/wiki_battle_terrain.gd" id="1_06hkl"]
[ext_resource type="PackedScene" uid="uid://b6xtjog47hpwu" path="res://Scenes/UI/Wiki/BattleWiki/WikiBattleTileButton.tscn" id="2_2oobg"]
[ext_resource type="Texture2D" uid="uid://cuyjne8lpdskl" path="res://Art/battle_map/rock.png" id="3_k2cxt"]

[node name="WikiBattleTerrain" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_06hkl")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Terrain"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox"]
layout_mode = 2

[node name="Column1" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleTerrainButton" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column1" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="BattleTerrainButton2" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column1" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="Column2" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleTerrainButton3" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column2" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="BattleTerrainButton4" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column2" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="Column3" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleTerrainButton5" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column3" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="BattleTerrainButton6" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column3" instance=ExtResource("2_2oobg")]
layout_mode = 2

[node name="Control" type="Control" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TileInformationContainer" type="ScrollContainer" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/TileInformationContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileName" type="Label" parent="Margin/VBoxContainer/HBoxContainer/TileInformationContainer/VBox"]
layout_mode = 2
text = "Rock"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/VBoxContainer/HBoxContainer/TileInformationContainer/VBox"]
layout_mode = 2
text = "Special Move Tile - you can only move toward it if you faced it before starting the move.

Stops ranged attacks- but not if you stand on top of it.

In case of pushing acts as a wall."
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Margin/VBoxContainer/HBoxContainer/TileInformationContainer/VBox"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_k2cxt")
expand_mode = 1
